<resources>
    <string name="app_name">Kids Academy</string>
    <string name="Contraseña">Contraseña</string>
    <string name="kids_academy">Kids Academy</string>
    <string name="ingresar">Ingresar</string>
    <string name="nombre">Nombre</string>
    <string name="contrase_a">Contraseña</string>
    <string name="edad">Edad</string>
    <string name="spanish">Español</string>
    <string name="elige_tu_m_dulo">Elige tu módulo</string>
    <string name="elige_nivel">Elige un nivel</string>
    <string name="nivel1">Nivel 1</string>
    <string name="nivel2">Nivel 2</string>
    <string name="nivel3">Nivel 3</string>
    <string name="nivel4">Nivel 4</string>
    <string name="math">Matemáticas</string>
    <string name="tica">Ética</string>
    <string name="ciencias">Ciencias</string>
    <string name="registrar">Registrarse</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="bienvenido">Bienvenido a Kids Academy</string>
    <string name="logros">¡Los grandes logros comienzan con pequeños esfuerzos!</string>
    <string name="seleccionar">Selecciona una opción:</string>
    <string name="aprenderf">Aprender es como un superpoder: ¡te hace más fuerte!</string>
    <string name="Correo">Correo</string>
    <string name="Fecha_nacimiento">Fecha de Nacimiento</string>
    <string name="viewcontra">Mostrar contraseña</string>
    <string name="completo">Felicidades por completar el módulo, ¡Sigue así! y lograrás tus objetivos</string>
    <string name="falta1">Debes completar el nivel 1 de cada módulo para continuar</string>
    <string name="falta2">Debes completar el nivel 2 de cada módulo para continuar</string>

</resources>