<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#678D94">

    <ImageView
        android:id="@+id/ivUserIcon"
        android:layout_width="195dp"
        android:layout_height="168dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/buhoini"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:fontFamily="@font/ananda"
        android:text="@string/kids_academy"
        android:textColor="@android:color/white"
        android:textSize="38sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etContrasena"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@android:color/white"
        android:fontFamily="@font/comfy_feeling"
        android:hint="@string/contrase_a"
        android:inputType="textPassword"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etNombre"
        app:layout_constraintWidth_percent="0.8" />

    <CheckBox
        android:id="@+id/verContra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/viewcontra"
        android:fontFamily="@font/comfy_feeling"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etContrasena" />

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@android:color/white"
        android:fontFamily="@font/comfy_feeling"
        android:hint="@string/nombre"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivUserIcon"
        app:layout_constraintWidth_percent="0.8" />

    <Button
        android:id="@+id/btnIngresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:backgroundTint="@android:color/white"
        android:fontFamily="@font/comfy_feeling"
        android:text="@string/ingresar"
        android:textColor="#678D94"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etContrasena" />

</androidx.constraintlayout.widget.ConstraintLayout>

