<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0E9BB3">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/ananda"
        android:text="@string/bienvenido"
        android:textColor="@android:color/white"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSeleccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="324dp"
        android:fontFamily="@font/ananda"
        android:text="@string/seleccionar"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnIniciarSesion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="292dp"
        android:backgroundTint="@android:color/white"
        android:fontFamily="@font/comfy_feeling"
        android:text="@string/iniciar_sesion"
        android:textColor="#00A0E3"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintWidth_percent="0.8" />

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="@android:color/white"
        android:fontFamily="@font/comfy_feeling"
        android:text="@string/registrar"
        android:textColor="#00A0E3"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnIniciarSesion"
        app:layout_constraintWidth_percent="0.8" />

    <ImageView
        android:id="@+id/ivUserIcon"
        android:layout_width="218dp"
        android:layout_height="190dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/gatosel2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <TextView
        android:layout_width="316dp"
        android:layout_height="64dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/ananda"
        android:text="@string/logros"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnRegistrar" />

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="351dp"
        android:layout_height="95dp"
        android:layout_marginTop="520dp"
        android:src="@drawable/gatobac"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.683"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>
