<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#ffe8e1"
    android:padding="16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:background="#ffe8e1"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/comfy_feeling"
            android:text="@string/elige_nivel"
            android:textColor="#D84315"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfy_feeling"
            android:text="@string/nivel1"
            android:textColor="#D84315"
            android:layout_gravity="left"
            android:textSize="24sp" />
        <GridLayout
            android:id="@+id/nivel1"
            android:layout_width="match_parent"
            android:layout_height="216dp"
            android:layout_gravity="center"
            android:columnCount="2"
            android:rowCount="1">

            <!-- Módulo Spanish -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                android:background="#FFCCBC"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:onClick="onActividad1Click"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:layout_width="131dp"
                    android:layout_height="120dp"
                    android:src="@drawable/spanishico" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/comfy_feeling"
                    android:text="Suma"
                    android:textColor="#ca1a0c"
                    android:textSize="25sp" />
            </LinearLayout>

            <!-- Módulo Math -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                android:background="#FFCCBC"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:onClick="onActividad2Click"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:layout_width="130dp"
                    android:layout_height="131dp"
                    android:src="@drawable/mathico" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/comfy_feeling"
                    android:text="Resta"
                    android:textColor="#ca1a0c"
                    android:textSize="25sp" />
            </LinearLayout>
        </GridLayout>

        <TextView
            android:id="@+id/aviso1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfy_feeling"
            android:layout_marginTop="24dp"
            android:text="@string/falta1"
            android:textColor="#D84315"
            android:textAlignment="center"
            android:textSize="20sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfy_feeling"
            android:layout_marginTop="24dp"
            android:text="@string/nivel2"
            android:textColor="#D84315"
            android:layout_gravity="left"
            android:textSize="24sp" />
        <GridLayout
            android:id="@+id/nivel2"
            android:layout_width="match_parent"
            android:layout_height="216dp"
            android:layout_gravity="center"
            android:columnCount="2"
            android:rowCount="1">

            <!-- Módulo Spanish -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                android:background="#FFCCBC"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:onClick="onActividad3Click"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:layout_width="131dp"
                    android:layout_height="120dp"
                    android:src="@drawable/spanishico" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/comfy_feeling"
                    android:text="Multiplica"
                    android:textColor="#ca1a0c"
                    android:textSize="25sp" />
            </LinearLayout>

            <!-- Módulo Math -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                android:background="#FFCCBC"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:onClick="onActividad4Click"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:layout_width="130dp"
                    android:layout_height="131dp"
                    android:src="@drawable/mathico" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/comfy_feeling"
                    android:text="División"
                    android:textColor="#ca1a0c"
                    android:textSize="25sp" />
            </LinearLayout>
        </GridLayout>

        <TextView
            android:id="@+id/aviso2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfy_feeling"
            android:layout_marginTop="24dp"
            android:text="@string/falta2"
            android:textColor="#D84315"
            android:textAlignment="center"
            android:textSize="20sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfy_feeling"
            android:layout_marginTop="24dp"
            android:text="@string/nivel3"
            android:textColor="#D84315"
            android:layout_gravity="left"
            android:textSize="24sp" />
        <GridLayout
            android:id="@+id/nivel3"
            android:layout_width="match_parent"
            android:layout_height="216dp"
            android:layout_gravity="center"
            android:columnCount="2"
            android:rowCount="1">

            <!-- Módulo Spanish -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                android:background="#FFCCBC"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:onClick="onActividad5Click"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:layout_width="131dp"
                    android:layout_height="120dp"
                    android:src="@drawable/spanishico" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/comfy_feeling"
                    android:text="Fracción 1"
                    android:textColor="#ca1a0c"
                    android:textSize="25sp" />
            </LinearLayout>

            <!-- Módulo Math -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                android:background="#FFCCBC"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:onClick="onActividad6Click"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:layout_width="130dp"
                    android:layout_height="131dp"
                    android:src="@drawable/mathico" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/comfy_feeling"
                    android:text="Fracción 2"
                    android:textColor="#ca1a0c"
                    android:textSize="25sp" />
            </LinearLayout>
        </GridLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="132dp"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="140dp"
                android:layout_height="142dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/buho" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/completo"
                android:fontFamily="@font/supersonic_rocketship"
                android:textColor="#D84315"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
